--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,41 +15,41 @@
 <div class="row">
   <div class="col-md-12">
     <div class="progress" id="knowledge-ratio">
-      <% @user.knowledge_ratio.each do |category, percentage| %>
-        <div class="progress-bar" style="width: <%= percentage %>%; background-color: <%= random_hex %>">
-          <span class="sr-only"><%= category %></span>
-          <%= percentage %>% <%= category %>
-        </div>
-      <% end %>
+      <%= render 'knowledge' %>
     </div>
   </div>
 </div>
 
 <div class="row">
   <div class="col-md-12" id="bookshelf">
+    <% if @user == current_user %>
+      <div class="book">
+        <a href="" title="Add a book" data-toggle="modal" data-target="#myModal"><img src="<%= image_path("book.png") %>" alt=""></a>
+      </div>
+    <% end %>
     <% @books.each do |book| %>
       <a href="<%= book_path(book) %>" class="book">
         <img src="<%= book.cover_small %>">
       </a>
     <% end %>
-    <div class="book">
-      <a href="" title="Add a book" data-toggle="modal" data-target=".bs-example-modal-lg"><img src="<%= image_path("book.png") %>" alt=""></a>
-    </div>
   </div>
 </div>
 
-<!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">Large modal</button> -->
-<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content modal-search">
       <div class="modal-header search-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-        <div id="search-bar">
           <%= form_tag(books_path, :method => "get", id: "search-form") do %>
-            <%= text_field_tag :search, params[:search], autofocus: true, placeholder: "Search books" %>
+
+              <div class="input-group">
+                <input name="search" type="text" class="form-control" placeholder="Search books" autofocus>
+                <span class="input-group-btn">
+                  <button id="search-books-button" class="btn btn-default" type="button">Go</button>
+                </span>
+              </div>
+
           <% end %>
         </div>
-      </div>
         <p id="notice"><%= notice %></p>
 
         <div id="search-results">
@@ -58,3 +58,5 @@
     </div>
   </div>
 </div>
+
+          
