--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,13 +8,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="<%= root_path %>">Shelfie</a>
+      <a id="nav-width-patch" class="navbar-brand" href="<%= user_path(current_user) %>">Shelfie</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="<%= root_path %>">Home</a></li>
+        <li><a href="<%= user_path(current_user) %>">Home</a></li>
         <li><a href="<%= books_path %>">Books</a></li>
         <li><a href="<%= users_path %>">People</a></li>
         <li><a href="<%= clubs_path %>">Clubs</a></li>
@@ -28,7 +28,7 @@
             </button>
           </span>
         </div>
-      </form>
+      </form> -->
 
 
 
@@ -39,7 +39,7 @@
           <a href="#" class="dropdown-toggle" id="current-user-menu" data-toggle="dropdown" role="button" aria-expanded="false"><%= image_tag(current_user.avatar.url(:small), class: "img-rounded") %> <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><%= link_to 'Profile', user_path(current_user) %></li>
-            <li><%= link_to 'Settings', edit_user_path(current_user) %></li>
+            <!-- <li><%= link_to 'Settings', edit_user_path(current_user) %></li> -->
             <li><%= link_to 'Log out', session_path(current_user), method: 'delete' %></li>
           </ul>
         </li>
