Finish Pre-alpha

--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -15,3 +15,10 @@ main {
 // #nav-width-patch {
 // 	padding-left: 0;
 // }
+#intro-heading {
+	text-align: center;
+}
+
+#intro-heading-row {
+	margin-bottom: 40px;
+}
