--- a/app/views/general/home.html.erb
+++ b/app/views/general/home.html.erb
@@ -17,8 +17,21 @@
   	<h3>Events</h3>
   </div>
 <% else %>
-  <div id="sign-up-form">
-    <%= render 'users/form' %>
-    <%= render 'sessions/form' %>
-   </div>
+  <div id="intro-heading-row" class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
+      <h1 id="intro-heading">Shelfie</h1>
+    </div>
+    <div class="col-md-4"></div>
+  </div>
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-3">
+      <%= render 'users/form' %>
+    </div>
+    <div class="col-md-3">
+      <%= render 'sessions/form' %>
+    </div>
+    <div class="col-md-3"></div>
+  </div>
 <% end %>
