--- a/app/assets/stylesheets/books.css.scss
+++ b/app/assets/stylesheets/books.css.scss
@@ -75,13 +75,7 @@
 	box-shadow: 0px 0px 4px #888888;
 }
 
-// #book-info {
-// 	position: relative;
-
-// 	#isbn {
-// 		position: absolute;
-// 		bottom: 10px;
-// 		right: 10px;
-// 	}
-// }
-
+#readership-toggle {
+	text-align: center;
+	margin-top: 10px;
+}
