--- a/app/views/general/home.html.erb
+++ b/app/views/general/home.html.erb
@@ -20,7 +20,7 @@
   <div id="intro-heading-row" class="row">
     <div class="col-md-4"></div>
     <div class="col-md-4">
-      <h1 id="intro-heading">Shelfie</h1>
+      <h1 id="intro-heading">Leavs</h1>
     </div>
     <div class="col-md-4"></div>
   </div>
@@ -34,4 +34,12 @@
     </div>
     <div class="col-md-3"></div>
   </div>
+  <div class="row">
+    <div class="col-md-12" id="intro-graphic">
+      <%= image_tag("books.png") %>
+    </div>
+  </div>
+  <footer>
+    Created by <a href="mailto:ryan@storberg.net">Ryan Storberg</a> in NYC.
+  </footer>
 <% end %>
