--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,15 +1,11 @@
 <h4>Sign up</h4>
 <%= form_for(@user) do |f| %>
   <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
-      <ul>
+      <ul class="alert-list">
       <% @user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <li class="alert alert-danger error" role="alert"><%= message %></li>
       <% end %>
       </ul>
-    </div>
   <% end %>
 
   <%= f.text_field :username, placeholder: 'Username', class: "form-control" %><br>
