--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,15 @@
+#profile-header {
+	position: relative;
+}
+
+#books-adder {
+	// height: 25px;
+	// width: 25px;
+	position: absolute;
+	right: 15px;
+	bottom: 0;
+}
+
 #knowledge-ratio {
 	margin: 15px 0 0 0;
 }
