--- a/app/views/general/home.html.erb
+++ b/app/views/general/home.html.erb
@@ -36,10 +36,7 @@
   </div>
   <div class="row">
     <div class="col-md-12" id="intro-graphic">
-      <%= image_tag("books.png") %>
+      <%= image_tag("books-original.png") %>
     </div>
   </div>
-  <footer>
-    Created by <a href="mailto:ryan@storberg.net">Ryan Storberg</a> in NYC.
-  </footer>
 <% end %>
