--- a/app/views/users/_follow.html.erb
+++ b/app/views/users/_follow.html.erb
@@ -1,6 +1,4 @@
-<%= form_for(current_user.active_relationships.
-                          build(followed_id: @user.id),
-                          remote: true) do |f| %>
-  <div><%= hidden_field_tag :followed_id, @user.id %></div>
-  <%= f.submit "Follow", class: "btn btn-primary" %>
+<%= form_for(current_user.active_relationships.build(followed_id: @user.id), remote: true) do |f| %>
+  <%= hidden_field_tag :followed_id, @user.id %>
+  <%= f.submit "Follow", class: "btn btn-default btn-md" %>
 <% end %>
