--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,22 +1,20 @@
 <h4>Sign up</h4>
 <%= form_for(@user) do |f| %>
   <% if @user.errors.any? %>
-      <ul class="alert-list">
-      <% @user.errors.full_messages.each do |message| %>
-        <li class="alert alert-danger error" role="alert"><%= message %></li>
+    <ul class="alert-list">
+      <% @user.errors.full_messages.reverse.each do |message| %>
+        <li class="alert alert-danger error" role="alert">
+          <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> 
+          <%= message %>
+        </li>
       <% end %>
-      </ul>
+    </ul>
   <% end %>
-
   <%= f.text_field :username, placeholder: 'Username', class: "form-control" %><br>
-
   <%= f.text_field :email, placeholder: 'Email', class: "form-control" %><br>
-
   <%= f.password_field :password, placeholder: 'Password', class: "form-control" %><br>
-
   <%= f.file_field :avatar %>
   <p class="help-block">Upload a profile image.</p>
-
   <div class="actions">
     <%= f.submit 'Sign up', class: "btn btn-default" %>
   </div>
