--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -12,8 +12,8 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <!-- <ul class="nav navbar-nav">
         <li><a href="<%= user_path(current_user) %>">Home</a></li>
         <li><a href="<%= books_path %>">Books</a></li>
         <li><a href="<%= users_path %>">People</a></li>
@@ -39,7 +39,7 @@
           <a href="#" class="dropdown-toggle" id="current-user-menu" data-toggle="dropdown" role="button" aria-expanded="false"><%= image_tag(current_user.avatar.url(:small), class: "img-rounded") %> <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><%= link_to 'Profile', user_path(current_user) %></li>
-            <!-- <li><%= link_to 'Settings', edit_user_path(current_user) %></li> -->
+            <li><%= link_to 'Settings', edit_user_path(current_user) %></li>
             <li><%= link_to 'Log out', session_path(current_user), method: 'delete' %></li>
           </ul>
         </li>
