--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -14,6 +14,7 @@
   <p class="help-block" id="form-info">Your name is displayed exactly as typed. It may contain uppercase letters and spaces.</p><br>
   <%= f.text_field :email, placeholder: 'Email', class: "form-control" %><br>
   <%= f.password_field :password, placeholder: 'Password', class: "form-control" %><br>
+  <%= f.password_field :password_confirmation, placeholder: 'Password confirmation', class: "form-control" %><br>
   <%= f.file_field :avatar %>
   <p class="help-block">Upload a profile image.</p>
   <div class="actions">
