--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -26,8 +26,13 @@
 
 <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-sm">
-    <div class="modal-content description-modal">
-      <p><%= @book.description %></p>
-    </div>
-  </div>
-</div>
+    <div class="modal-content">
+      <div class="modal-body">
+        <p><%= @book.description %></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div> <!-- modal-content -->
+  </div> <!-- modal-dialog -->
+</div> <!-- modal -->
