--- a/app/assets/stylesheets/books.css.scss
+++ b/app/assets/stylesheets/books.css.scss
@@ -26,6 +26,16 @@
 	}
 }
 
+.searched-book {
+	width: 99.469px;
+	form {
+		width: 100%;
+		input {
+			width: 100%;
+		}
+	}
+}
+
 #search-results {
 	text-align: justify;
 	padding: 10px;
