--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <div class="row" id="profile-header">
-  <div class="col-md-12">
+  <!-- Large -->
+  <div class="hidden-xs col-sm-12">
     <%= image_tag @user.avatar.url(:large), class: "img-rounded profile-img" %>
     <div id="profile-info">
       <h1><%= @user.username %></h1>
@@ -9,6 +10,21 @@
     <% if current_user?(@user) %>
       <button type="button" class="btn btn-default btn-md" id="books-adder" data-toggle="modal" data-target="#myModal">
         <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> Add books
+      </button>
+    <% end %>
+  </div>
+
+  <!-- Small -->
+  <div class="col-xs-12 hidden-sm hidden-md hidden-lg" id="xs-profile">
+    <%= image_tag @user.avatar.url(:large), class: "img-rounded profile-img-xs" %>
+    <div id="">
+      <h1><%= @user.username %></h1>
+      <%= render 'relationships/stats' %>
+      <%= render 'follow_form' if logged_in? %>
+    </div>
+    <% if current_user?(@user) %>
+      <button type="button" class="btn btn-default btn-md" id="books-adder" data-toggle="modal" data-target="#myModal">
+        <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
       </button>
     <% end %>
   </div>
@@ -31,7 +47,7 @@
       </div>
     <% end %>
     <% @books.each do |book| %>
-      <a href="<%= book_path(book) %>" class="book">
+      <a href="<%= book_path(book) %>" class="book user-book">
         <img src="<%= book.cover_small %>">
       </a>
     <% end %>
