--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,6 +1,6 @@
 <% if @books %>
   <% @books.each do |book| %>
-    <div class='book'>
+    <div class='book searched-book'>
       <%= form_for :readership, url: readerships_path, remote: true, html: { :class => 'new_read_book' } do |f| %>
         <%= image_submit_tag(book.image_link) %>
         <%= f.hidden_field :user_id, value: current_user.id %>
