--- a/app/assets/stylesheets/books.css.scss
+++ b/app/assets/stylesheets/books.css.scss
@@ -75,14 +75,13 @@
 	padding-bottom: 15px;
 	background-color: #f8f8f8;
 	border-radius: 4px;
-	// box-shadow: 0px 0px 4px #888888;
-	margin-left: 0;
+	margin: 0 0 15px 0;
 	border: 1px solid #e7e7e7;
-	// border-color: #e7e7e7;
 }
 
 #book-info-image {
 	box-shadow: 0px 0px 4px #888888;
+	width: 100%;
 }
 
 #readership-toggle {
