--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,15 @@
+// Extra small screen / phone
+$screen-xs:                  480px !default;
+
+// Small screen / tablet
+$screen-sm:                  768px !default;
+
+// Medium screen / desktop
+$screen-md:                  992px !default;
+
+// Large screen / wide desktop
+$screen-lg:                  1200px !default;
+
 #profile-header {
 	position: relative;
 }
@@ -46,9 +58,27 @@
 }
 
 .user-book {
-	width: 84px;
+	width: 28.9%;
 	img {
 		width: 100%;
+	}
+}
+
+@media (min-width: $screen-sm) and (max-width: $screen-md) {
+	.user-book {
+		width: 14.8%;
+	}
+}
+
+@media (min-width: $screen-md) and (max-width: $screen-lg) {
+  .user-book {
+		width: 12.8%;
+	}
+}
+
+@media (min-width: $screen-lg) {
+  .user-book {
+		width: 11.3%;
 	}
 }
 
