--- a/app/views/readerships/_show.html.erb
+++ b/app/views/readerships/_show.html.erb
@@ -1,3 +1,3 @@
-<a href="<%= book_path(@readership.book) %>" class="book">
+<a href="<%= book_path(@readership.book) %>" class="book user-book">
   <img src="<%= @readership.book.cover_small %>">
 </a>
