--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,7 +4,7 @@
 			<div class="col-xs-4 col-sm-3 col-md-5">
 				<%= image_tag @book.cover_medium, id: "book-info-image" %>
         <% if current_user.books.include?(@book) %>
-          <%= form_for(current_user.books.find_by(isbn: @book.isbn), html: { method: :delete, id: "readership-toggle" }, remote: true) do |f| %>
+          <%= form_for(current_user.readerships.find_by(book_id: @book.id), html: { method: :delete, id: "readership-toggle" }, remote: true) do |f| %>
             <%= f.submit "Unread", class: "btn" %>
           <% end %>
         <% end %>
