Change name to Shelfie Club; update .gitignore

--- a/app/views/general/home.html.erb
+++ b/app/views/general/home.html.erb
@@ -1,7 +1,7 @@
 <div id="intro-heading-row" class="row">
   <div class="col-md-4"></div>
   <div class="col-md-4">
-    <h1 id="intro-heading"><a href="<%= root_path %>">Leavs</a></h1>
+    <h1 id="intro-heading"><a href="<%= root_path %>">Shelfie Club</a></h1>
   </div>
   <div class="col-md-4"></div>
 </div>
