--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a id="nav-width-patch" class="navbar-brand" href="<%= user_path(current_user) %>">Leavs</a>
+      <a id="nav-width-patch" class="navbar-brand" href="<%= user_path(current_user) %>">Shelfie Club</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
