--- a/app/views/layouts/_nav_o.html.erb
+++ b/app/views/layouts/_nav_o.html.erb
@@ -1,7 +1,7 @@
 <nav>
 	<div id='nav-left'>
 		<h1>
-			<%= link_to 'Shelfie', root_path %>
+			<%= link_to 'Shelfie Club', root_path %>
 		</h1>
 	</div>
 
