--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -19,7 +19,8 @@ html {
 #nav-width-patch {
 	font-size: 3em;
 	color: #64C08C;
-	font-family: 'Gentium Book Basic', serif;
+	font-family: 'Lato', sans-serif;
+	// padding: 17px 15px 13px 15px;
 }
 
 #general-search {
