--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -38,7 +38,7 @@ main {
 }
 
 #intro-heading {
-	font-family: 'Gentium Book Basic', serif;
+	font-family: 'Lato', sans-serif;
 	text-align: center;
 	font-size: 6em;
 	margin: 0;
