--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,7 +43,7 @@
     <% if flash.any? %>
       <div class="alert alert-success alert-dismissible" id="alert-add-books" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        Welcome to Leavs! <a href="#" class="alert-link" data-toggle="modal" data-target="#myModal"><%= notice %></a> to get started!
+        Welcome to Shelfie! <a href="#" class="alert-link" data-toggle="modal" data-target="#myModal"><%= notice %></a> to get started!
       </div>
     <% end %>
     <% @books.each do |book| %>
