--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     </main>
 
     <footer id="sig-footer">
-      <p id="sig">Created by <a href="http://ryanstorberg.com/" target="_blank">Ryan Storberg</a> in New York City</p>
+      <p id="sig">Copyright &copy 2015 Shelfie. All rights reserved.</p>
     </footer>
 
   </body>
