--- a/app/views/general/home.html.erb
+++ b/app/views/general/home.html.erb
@@ -2,6 +2,7 @@
   <div class="col-md-4"></div>
   <div class="col-md-4">
     <h1 id="intro-heading"><a href="<%= root_path %>">Shelfie</a></h1>
+    <h2 id="intro-sub-heading">Showcase what you've read. Make a shelfie.</h2>
   </div>
   <div class="col-md-4"></div>
 </div>
@@ -25,7 +26,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-12" id="intro-graphic">
-    <%= image_tag("books-original.png") %>
+  <div id="intro-graphic" class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2" >
+    <%= image_tag("books.png") %>
   </div>
 </div>
