--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -35,6 +35,22 @@
 
 
       <ul class="nav navbar-nav navbar-right">
+        <form id="universal-search" class="navbar-form navbar-left" role="search">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search for books or people">
+            <span class="input-group-btn">
+              <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
+            </span>
+          </div>
+        </form>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" id="current-user-menu" data-toggle="dropdown" role="button" aria-expanded="false"><%= image_tag('alert-inactive.png', class: "img-rounded") %> <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><%= link_to 'Profile', user_path(current_user) %></li>
+            <li><%= link_to 'Settings', edit_user_path(current_user) %></li>
+            <li><%= link_to 'Log out', session_path(current_user), method: 'delete' %></li>
+          </ul>
+        </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" id="current-user-menu" data-toggle="dropdown" role="button" aria-expanded="false"><%= image_tag(current_user.avatar.url(:small), class: "img-rounded") %> <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
